@@ -261,6 +261,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   This corrects some odd behavior with sidebar items and custom namespaces
   containing ampersands.
 * (bug 10375) Change thousands separator character to &nbsp; for Latin (la)
+* (bug 10477) Fix AJAX watch for Farsi on Firefox: JavaScript encoding tweak
 
 
 == API changes since 1.10 ==
